<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.dapla.secrets</groupId>
    <artifactId>dapla-secrets-client-api</artifactId>
    <version>0.3.0</version>
    <packaging>jar</packaging>

    <name>Dapla Secrets Client API</name>
    <description>Dapla Secrets Client API</description>
    <url>https://github.com/statisticsnorway/</url>
    <inceptionYear>2020</inceptionYear>

    <properties>
        <java.version>11</java.version>
        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ove Ranheim</name>
            <email>ove.ranheim@gmail.com</email>
            <url>https://www.linkedin.com/in/oranheim/</url>
            <organization>Capra Consulting AS</organization>
            <organizationUrl>https://www.capraconsulting.no/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/statisticsnorway/dapla-secrets-client-api.git</connection>
        <developerConnection>scm:git:git@github.com:statisticsnorway/dapla-secrets-client-api.git
        </developerConnection>
        <url>https://github.com/statisticsnorway/dapla-secrets-client-api/tree/master</url>
        <tag>v0.3.0</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>no.ssb.spi</groupId>
            <artifactId>service-provider-api</artifactId>
            <version>0.4</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>coverage</id>
            <properties>
                <sonar.coverage.jacoco.xmlReportPaths>
                    target/site/jacoco/jacoco.xml
                </sonar.coverage.jacoco.xmlReportPaths>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.7.0.1746</version>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.6</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>ssb-bip</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <additionalOptions>-Xdoclint:none</additionalOptions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <repositories>
                <repository>
                    <id>ssb-bip-releases</id>
                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-public/</url>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </repository>
            </repositories>
            <distributionManagement>
                <repository>
                    <id>ssb-bip-releases</id>
                    <name>SSB Nexus Releases</name>
                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>ssb-bip-snapshots</id>
                    <name>SSB Snapshot Repository</name>
                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${module.build.sourceEncoding}</encoding>
                    <meminitial>64m</meminitial>
                    <maxmem>512m</maxmem>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --illegal-access=deny
                        -Xmx1500m
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
